feat: add toggle component markup
- Reference: https://flowbite.com/docs/forms/toggle/

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,9 @@
     <h4 class="font-bold text-xl">Angular - Multi List App</h4>
 
     <div class="flex gap-3">
-      <div class="px-2 font-medium cursor-pointer">Toggle API here</div>
+      <div class="px-2 font-medium cursor-pointer">
+        <app-toggle />
+      </div>
     </div>
   </div>
 </header>
