--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,1 +1,5 @@
-<p>list works!</p>
+<section class="w-full flex flex-wrap">
+  @for (item of [1,2,3,4,5,6,7]; track $index) {
+  <app-card class="w-1/3 mt-8" />
+  }
+</section>
