--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,10 +1,18 @@
-<div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow">
-  <img class="rounded-t-lg" src="https://flowbite.com/docs/images/blog/image-1.jpg" alt="" />
+<div class="h-full max-w-sm bg-white border border-gray-200 rounded-lg shadow">
+  <img
+    [width]="240"
+    [height]="240"
+    class="w-full min-h-60 max-h-60 rounded-t-lg"
+    [src]="imageURL || '../../../assets/images/no-image.png'"
+    alt="Item Image"
+  />
 
   <div class="p-5">
-    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Noteworthy technology acquisitions 2021</h5>
+    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">
+      {{ title }}
+    </h5>
     <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-      Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.
+      {{ description }}
     </p>
   </div>
 </div>
