--- a/src/app/components/controls/controls.component.html
+++ b/src/app/components/controls/controls.component.html
@@ -1,7 +1,5 @@
 <section class="flex justify-between items-center">
-  <h2 class="text-2xl uppercase font-bold">Nome da API atual aqui</h2>
-
-  <input type="text" />
+  <h2 class="text-2xl font-semibold text-blue-700/50">NarutoDB</h2>
 </section>
 
 <app-filter-list></app-filter-list>
