--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,4 @@
 @import "./assets/scss/variables";
 @import "./assets/scss/main";
 @import "./assets/scss/layout";
+@import "./assets/scss/externalProviders";
