--- a/src/app/components/controls/controls.component.html
+++ b/src/app/components/controls/controls.component.html
@@ -1,5 +1,7 @@
 <section class="flex justify-between items-center">
-  <h2 class="text-2xl font-semibold text-blue-700/50">NarutoDB</h2>
+  <h2 class="text-2xl font-semibold naruto-gradient" [class.pokemon-gradient]="shouldUsePokeAPI">
+    {{ title }}
+  </h2>
 </section>
 
 <app-filter-list></app-filter-list>
