feat: change filter buttons to sort buttons

--- a/src/app/components/controls/controls.component.html
+++ b/src/app/components/controls/controls.component.html
@@ -1,7 +1,7 @@
-<section class="flex justify-between items-center">
-  <h2 class="text-2xl font-semibold naruto-gradient" [class.pokemon-gradient]="shouldUsePokeAPI">
+<section class="flex justify-between items-center mb-4">
+  <h2 class="text-3xl font-semibold naruto-gradient" [class.pokemon-gradient]="shouldUsePokeAPI">
     {{ title }}
   </h2>
-</section>
 
-<app-filter-list></app-filter-list>
+  <app-filter-list></app-filter-list>
+</section>
