--- a/src/app/components/filter-list/filter-list.component.html
+++ b/src/app/components/filter-list/filter-list.component.html
@@ -1,8 +1,8 @@
 <section class="w-full pt-4 pb-8">
   <div class="flex items-center gap-4">
-    @for (item of ['10 mais recentes', '10 últimos', 'Randomizar']; track $index) {
+    @for (sort of sorters; track $index) {
     <button class="btn-sm btn-rounded-md btn-outline-primary">
-      {{ item }}
+      {{ sort }}
     </button>
     }
   </div>
