feat: convert Promise to Observable

--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,5 +1,5 @@
 <section class="w-full grid grid-cols-3 gap-8">
   @for (item of items; track $index) {
-  <app-card [title]="item.name" [description]="item.description" [imageURL]="item.imageURL" class="flex-1" />
+  <app-card [title]="item.name" [description]="item.description" [imageURL]="item.imageURL" />
   }
 </section>
